--- a/src/components/quiz.css
+++ b/src/components/quiz.css
@@ -1,3 +1,7 @@
+#quizPicker {
+  
+}
+
 .quizInfo {
   list-style: none;
   margin-left: 0;
@@ -18,7 +22,7 @@
   flex-direction: column;
 }
 
-.altDiv label {
+.choice {
   padding: 20px;
   border: solid 1px white;
   margin-bottom: 10px;
