--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@ body {
   text-decoration: none;
 }
 
+nav:hover {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 600px) {
   .container {
     width: 100%;
